[package]
name = "unrealscriptplus"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "unrealscriptplus"
crate-type = ["cdylib"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
glob = "0.3.0"
encoding = "0.2"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]