[package]
name = "unrealscriptplus"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true

[lib]
name = "unrealscriptplus"
crate-type = ["lib"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
encoding = "0.2"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
pest_consume = "1.1.1"
pest_consume_macros = "1.1.0"
convert_case = "0.4.0"
if_chain = "1.0.2"