[package]
name = "unrealscriptplus"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unrealscriptplus"
crate-type = ["lib", "cdylib"]

[dependencies]
convert_case = "0.6.0"
encoding = "0.2"
if_chain = "1.0.2"
lazy_static = "1.4.0"
pest = "2.7.4"
pest_consume = "1.1.3"
pest_consume_macros = "1.1.0"
pest_derive = "2.7.4"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
